# mfstool

./: Makefile.am  Makefile.in  README  bitops.h  configure  configure.in  dir.c  genfs.c  iname.c  inode.c  main.c  mfstool.1  minix_fs.h  protos.h  super.c  writer.c
